syntax = "proto3";

package credentials;

import "credential/core.proto";

// Repository is a service that allows to interact with all hosts.
service Credentials {
   rpc CreateCredential(CreateCredentialRequest) returns (CreateCredentialResponse) {}
   rpc GetCredential(ReadCredentialRequest) returns (ReadCredentialResponse) {}
   rpc GetCredentialMany(ReadCredentialRequest) returns (ReadCredentialResponse) {}
   rpc UpsertCredential(UpsertCredentialRequest) returns (UpsertCredentialResponse) {}
   rpc DeleteCredential(DeleteCredentialRequest) returns (DeleteCredentialResponse) {}
}

message CreateCredentialRequest {
    repeated credential.Core Credentials = 1;
}

message CreateCredentialResponse {
    repeated credential.Core Credentials = 1;
}

message ReadCredentialRequest{
    credential.Core Credential = 1;
}

message ReadCredentialResponse{
    repeated credential.Core Credentials = 1;
}

message ReadCredentialManyRequest{
    credential.Core Credential = 1;
}

message ReadCredentialManyResponse{
    repeated credential.Core Credentials = 1;
}

message UpsertCredentialRequest{
    repeated credential.Core Credentials = 1;
}

message UpsertCredentialResponse{
    repeated credential.Core Credentials = 1;
}

message DeleteCredentialRequest{
    repeated credential.Core Credentials = 1;
}

message DeleteCredentialResponse{
    repeated credential.Core Credentials = 1;
}

